--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "paperchase-figurecrawl",
 	"version": "0.0.1",
 	"dependencies": {
+		"mongodb": "~2.0",
 		"request": "2.62.0",
 		"async": "1.4.2",
 		"express": "4.13.3",
