--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-	"name": "paperchase-figurecrawl",
-	"version": "0.0.1",
-	"dependencies": {
-		"mongodb": "~2.0",
-		"request": "2.62.0",
-		"async": "1.4.2",
-		"express": "4.13.3",
-		"node-phantom-simple": "2.0.5"
-	}
+  "name": "paperchase-figurecrawl",
+  "version": "0.0.1",
+  "dependencies": {
+    "async": "1.4.2",
+    "express": "4.13.3",
+    "js2xmlparser": "^1.0.0",
+    "jsftp": "^1.5.2",
+    "mongodb": "~2.0",
+    "node-phantom-simple": "2.0.5",
+    "request": "^2.62.0",
+    "xml2js": "^0.4.12"
+  }
 }
