--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongodb": "~2.0",
     "node-phantom-simple": "2.0.5",
     "request": "^2.62.0",
+    "s3": "andrewrk/node-s3-client",
     "xml2js": "^0.4.12"
   }
 }
