S3 Package - Using local
Update to work with AWS 2.1.1. Cannot handle files >1MB. Repo is
updated but need to use local package since npm is not updated.
https://github.com/andrewrk/node-s3-client/pull/118

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "paperchase-figurecrawl",
-  "version": "0.0.1",
+  "name": "paperchase-crawler",
+  "version": "0.0.2",
   "dependencies": {
     "async": "1.4.2",
     "express": "4.13.3",
@@ -9,7 +9,7 @@
     "mongodb": "~2.0",
     "node-phantom-simple": "2.0.5",
     "request": "^2.62.0",
-    "s3": "^4.4.0",
+    "aws-sdk": "~2.2.16",
     "xml2js": "^0.4.12"
   }
 }
