--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node-phantom-simple": "2.0.5",
     "request": "2.62.0",
     "s3": "4.4.0",
-    "xml2js": "0.4.12"
+    "xml2js": "0.4.12",
+    "xpath": "0.0.23",
+    "xmldom": "0.1.22"
   }
 }
