--- a/new_crawling_code/package.json
+++ b/new_crawling_code/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mime": "^1.3.4"
+    "aws-sdk": "^2.3.17",
+    "co": "^4.6.0",
+    "express": "^4.13.4",
+    "unzip": "^0.1.11"
   }
 }
