--- a/new_crawling_code/package.json
+++ b/new_crawling_code/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.3.17",
     "co": "^4.6.0",
     "express": "^4.13.4",
+    "mmmagic": "^0.4.4",
     "unzip": "^0.1.11"
   }
 }
