--- a/new_crawling_code/package.json
+++ b/new_crawling_code/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.3.17",
+    "bluebird": "^3.4.0",
     "co": "^4.6.0",
     "express": "^4.13.4",
     "mmmagic": "^0.4.4",
